feat: create tech endpoint
